--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "libft"]
 	path = libft
 	url = https://github.com/protsaq/libft.git
+[submodule "push_swap_visualizer"]
+	path = push_swap_visualizer
+	url = git@github.com:o-reo/push_swap_visualizer.git
